Mon Apr 24 22:19:34 BST 2006 (njh)
----------------------------------
  * libclamav/pst.[ch]:	Added first PST support - code yet to be cleaned or
				audited

Mon Apr 24 18:22:22 CEST 2006 (tk)
----------------------------------
  * libclamav: add skeleton support for PST files (patch from NJH)

Sun Apr 23 13:58:31 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Ensure that the quarantine location reported in
				notifications is correct. Patch by
				Simon Munton <simon at nidoran.m5data.com>

Fri Apr 21 14:28:43 CEST 2006 (tk)
----------------------------------
  * libclamav/readdb.c: load *.hdb, *.fp, *.zmd and *.rmd in hwaccel mode

Fri Apr 21 13:44:44 CEST 2006 (tk)
----------------------------------
  * libclamav/matcher.c: add support for *.hdb and *.fp databases in hwaccel
			 mode

Wed Apr 19 12:31:44 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Mark the use of --mail-follow-urls without CURL as
			deprecated - it will be completely removed in a future
			release

Sat Apr 15 19:55:35 CEST 2006 (tk)
----------------------------------
  * clamconf: initial version of configuration tool
	      Requested by Tomasz Papszun <tomek*clamav.net>

Tue Apr 11 21:29:41 BST 2006 (njh)
----------------------------------
  * libclamav/pdf.c:	Fix the handling of the trailing few bytes in
			ASCII85Decode

Mon Apr 10 11:45:07 CEST 2006 (tk)
----------------------------------
  * fix other implicit function declarations
    Thanks to Paul Fisher <pnfisher*berkeley.edu>, Ludwig Nussel
    <ludwig.nussel*suse.de> and Stephen Gran <steve*lobefin.net>

Mon Apr 10 01:05:28 CEST 2006 (tk)
----------------------------------
  * libclamav/sis.c: handle pseudo-archives generated by installers
		     Samples provided by aCaB

Sun Apr  9 21:49:22 CEST 2006 (tk)
----------------------------------
  * update GPL headers with new address for FSF

Sun Apr  9 10:35:15 BST 2006 (njh)
----------------------------------